sample-apps/httpbin/multi-gw/gw.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: private-gateway
  namespace: istio-ingress-private
spec:
  selector:
    app: istio-ingress-private
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*' 
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-ingress-public
spec:
  selector:
    app: istio-ingress-public
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
