sample-apps/httpbin/multi-gw/virtualservice-httpbin.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-private-route
  namespace: httpbin-private
spec:
  gateways:
  - private-gateway
  hosts:
  - httpbin-private.kyle.consultsolo.net
  http:
  - match:
    - uri:
        prefix: /
    name: httpbin-private-route
    route:
    - destination:
        host: httpbin.httpbin-private.svc.cluster.local
        port:
          number: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-public-route
  namespace: httpbin-public
spec:
  gateways:
  - public-gateway
  hosts:
  - httpbin-public.kyle.consultsolo.net
  http:
  - match:
    - uri:
        prefix: /
    name: httpbin-public-route
    route:
    - destination:
        host: httpbin.httpbin-public.svc.cluster.local
        port:
          number: 8000
